# building-energy-prediction-api

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  schemas.py
app/model/: energy_model.pkl
frontend/: index.html
scripts/: train_model.py
